hphp/hack/test/typecheck/enum_class_enumerator_attr.php.rust_elab.exp
File "enum_class_enumerator_attr.php", line 15, characters 35-35:
Attributes on enum class enumerators are not allowed (Parsing[1002])
